Fix the color of .pbList when web font is disabled and dark mode.

--- a/pbList/scss/04_prettify.scss
+++ b/pbList/scss/04_prettify.scss
@@ -94,10 +94,11 @@
         
         .pbList-noWebFont .pbList {
             background-color : #000;
-        }
-        .pbList-noWebFont.jsNoFilter .pbList {
             font {
                 background-color : white;
+            }
+            font:after {
+                filter           : invert(100%);
             }
             .pbList-area {
                 background-color : #C487A0;
